icons, fix chrome ext

--- a/ext/common/options.html
+++ b/ext/common/options.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Random Email Generator Settings</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="icon" href="/icons/icon-128.png" />
   </head>
   <body>
     <h2>Settings - Random Email Generator:</h2>
